Updated website with improved hero section and transparent header

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,17 @@ pids
 *.seed
 *.pid.lock
 
-# Large ML/AI libraries
+# Large binary files
 *.dylib
 *.so
 *.dll
+*.exe
+libtorch*
+
+# Torch and ML libraries  
+**/torch/**
+**/torchvision/**
+**/torchaudio/**
+**/numpy/.dylibs/**
+**/scipy/.dylibs/**
+**/llvmlite/**
