--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.4.2",
+    "@react-three/fiber": "^9.2.0",
+    "@react-three/rapier": "^2.1.0",
+    "framer-motion": "^12.23.0",
+    "meshline": "^3.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
