--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.0",
     "gl-matrix": "^3.4.3",
+    "marked": "^16.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.6.3"
