--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node pietrzyk/index.supabase.js"
   },
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "express": "^5.1.0",
     "firebase": "^12.0.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.23.0",
     "gl-matrix": "^3.4.3",
     "marked": "^16.1.1",
+    "nodemailer": "^7.0.5",
     "react": "^18.2.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "@supabase/supabase-js": "^2.39.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -27,11 +33,12 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.55.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "vite": "^7.0.6"
   }
 }
