--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "next": "^14.2.3",
     "@supabase/supabase-js": "^2.39.7",
     "@types/react-router-dom": "^5.3.3",
     "express": "^5.1.0",
